Adding Patient ajax and rest controller